@@ -5,6 +5,7 @@
 
 0.6.4
   * Cleaned up the coherent part of the dedispersion module
+  * Added a time estimating progress bar to lsl.common.progress
 
 0.6.3
   * Fixed a typo. in lsl.imaing.utils.pruneBaselineRange() function
